<resources>
    <string name="app_name">MyNotesRoom</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_note_list">EditNote</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="title_activity_main">NoteKeeperRoom</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_notes">Notes</string>
    <string name="menu_courses">Courses</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="note_tiltle_hint">Note tiltle</string>
    <string name="note_text_hint">Note text</string>
    <string name="notes">You already shared</string>
    <string name="send">send</string>
    <integer name="jkjn">100</integer>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="general_header">General</string>
    <string name="sync_header">Sync</string>

    <!-- General Preferences -->
    <string name="display_name_title">Your Name</string>
    <string name="pref_email_address">Email Address</string>
    <string name="default_email_address">yourname@yourhost.com</string>
    <string name="pref_title_favorite_social">Favorite social network</string>
    <string name="pref_default_favorite_social">https://plus.google.com</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="note_reminder_notification_title_template">Note reminder: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="note_reminder_notification_placeholder_text_template">You said %1$s and lorem
        ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit
        vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>
    <string name="communicate">Communicate</string>
</resources>
